# roboptim-core-plugin-knitro

./: .clang-format  CMakeLists.txt
include/roboptim/core/plugin/knitro/: knitro-parameters-updater.hh  knitro-solver.hh  solver.hh  solver.hxx  util.hh
src/: CMakeLists.txt  knitro-sparse.cc  knitro.cc  roboptim-core-plugin-knitro.cc  roboptim-core-plugin-knitro.hh
tests/: CMakeLists.txt
